Optimized and Added New Endpoints
