# controllers/Dashboard/Sales/sales_customer.py
@@ -52,103 +52,118 @@ SELECT
     ct.OfficeId As officeId,
     ct.OfficeName As officeName,
     ot.OfficeTypeName As officeType,
-	S.Total,
+	S.total,
     S.CustomerName,
     S.MobileNo,
-    S.VehicleNo
+    S.VehicleNo,
+    S.InvoiceDate,
+    S.Quantity As qty,
+    FR.ProductTypeId As productId,
+	Pt.ProductTypeName As productName,
+	UM.UnitName As unitName,
+	UM.UnitShortName As unitShortName,
+	Um.SingularShortName As singularShortName,
+    S.Rate As rate,
+    PT.Color As color
 	
 FROM cte_org ct
 LEFT OUTER JOIN OfficeType ot ON ct.OfficeTypeId = ot.OfficeTypeId
 
 Left Outer join (
-    Select Total,
+    Select total,
     CustomerName,
     MobileNo,
     VehicleNo,
-    OfficeId
+    OfficeId,
+    InvoiceDate,
+    Rate,
+    FuelRateId,
+    Quantity
     From
     Sales Where
 IsDeleted=0 AND
 InvoiceDate>='{from_date}' AND InvoiceDate<='{to_date}') S
-On ct.officeId=S.OfficeId 
+On ct.officeId=S.OfficeId
+Left join
+FuelRate FR ON FR.FuelRateId=S.FuelRateId
+Left join
+ProductType PT ON FR.ProductTypeId=PT.ProductTypeId
+Left join
+UnitMaster UM ON PT.PrimaryUnitId=UM.UnitId
 
 WHERE
     ({level} < 0 OR ct.Level <= {level})
     ''',cnxn)
     return df
 
-def total_sales_based_on_customer_body(df):
-    df_by_name=pd.DataFrame()
-    df_by_mobile=pd.DataFrame()
-    df_by_vehicle=pd.DataFrame()
+def total_sales_based_on_customer_body(df,date_range,CustomerName,MobileNo,VehicleNo):
     
-    df_by_name_mask=df[df["CustomerName"]!=""]
-    if not df_by_name_mask.empty:
-        df_by_name_mask["CustomerName"]=df_by_name_mask["CustomerName"].str.upper()
-        df_by_name_mask=df_by_name_mask[df_by_name_mask["CustomerName"]!="XXX"]
-        df_by_name=df_by_name_mask.groupby(["CustomerName"],as_index=True).agg(total=("Total","sum"),count=("Total","count"),filterName=("CustomerName","first")).sort_values(by=["total"],ascending=True).reset_index(drop=True)[-10:]
-
-    df_by_mobile_mask=df[df["MobileNo"]!=""]
-    if not df_by_mobile_mask.empty:
-        df_by_mobile_mask["MobileNo"]=df_by_mobile_mask["MobileNo"].str.replace(' ', '')
-        df_by_mobile_mask=df_by_mobile_mask[df_by_mobile_mask["MobileNo"]!="0000"]
-        df_by_mobile=df_by_mobile_mask.groupby(["MobileNo"],as_index=True).agg(total=("Total","sum"),count=("Total","count"),filterName=("MobileNo","first")).sort_values(by=["total"],ascending=True).reset_index(drop=True)[-10:]
-    
-    df_by_vehicle_mask=df[df["VehicleNo"]!=""]
-    if not df_by_vehicle_mask.empty:
-        df_by_vehicle_mask["VehicleNo"]=df_by_vehicle_mask["VehicleNo"].str.replace(' ', '').str.upper()
-        df_by_vehicle_mask=df_by_vehicle_mask[df_by_vehicle_mask["VehicleNo"]!="XXX"]
-        # Group the data by vehicle number and collect mobile numbers as lists
-        # grouped = df.groupby('VehicleNo')['MobileNo'].apply(list)
-
-        # # Filter groups where there are multiple mobile numbers
-        # vehicles_with_multiple_mobiles = grouped[grouped.apply(len) > 1]
-
-        # for vehicle_number, mobile_numbers in vehicles_with_multiple_mobiles.items():
-        #     print(f"Vehicle {vehicle_number} has multiple mobile numbers: {', '.join(mobile_numbers)}")
+    try:
+        date_df = pd.DataFrame({"requestedDate": date_range})
+        if CustomerName!=None:
+            df=df[df["CustomerName"].str.upper()==CustomerName]
+        elif MobileNo!=None:
+            df=df[df["MobileNo"].str.replace(' ', '')==MobileNo]
+        elif VehicleNo!=None:
+            df=df[df["VehicleNo"].str.replace(' ', '').str.upper()==VehicleNo]
         
-
-
-        df_by_vehicle=df_by_vehicle_mask.groupby(["VehicleNo"],as_index=True).agg(total=("Total","sum"),count=("Total","count"),filterName=("VehicleNo","first")).sort_values(by=["total"],ascending=True).reset_index(drop=True)[-10:]
+        alldata_df = date_df.merge(df, left_on="requestedDate",right_on="InvoiceDate", how="left")
+        alldata_df["requestedDate"] = alldata_df["requestedDate"].dt.strftime('%Y-%m-%d')
+        if not df.empty:
+            Sales_result = alldata_df.groupby("requestedDate").apply(lambda group: {
+                    # "date": group["InvoiceDate"].iloc[0].strftime("%Y-%m-%d"),
+                    "totalIncome": group["total"].sum(),
+                    "lstproduct":group.groupby(["productId"]).agg({"total":"sum","qty":"sum","productName":"first","unitName":"first","unitShortName":"first","singularShortName":"first","color":"first"}).reset_index().to_dict(orient="records")})
+        else:
+            Sales_result=pd.Series()
+    except:
+        print("Sales Customer Details Error")
+    # for i in date_range:
+    #     alldata.append({
+    #             "requestedDate": pd.to_datetime(i).strftime("%Y-%m-%d"),
+    #             "totalIncome": Sales_result[pd.to_datetime(i).strftime("%Y-%m-%d")]["totalIncome"] if pd.to_datetime(i).strftime("%Y-%m-%d") in Sales_result else 0,
+    #             "lstproduct": Sales_result[pd.to_datetime(i).strftime("%Y-%m-%d")]["lstproduct"] if pd.to_datetime(i).strftime("%Y-%m-%d") in Sales_result else [],
+    #         })
     
-    return {"byName":df_by_name.to_dict('records'),"byMobile":df_by_mobile.to_dict('records'),"byVehicle":df_by_vehicle.to_dict('records')}
+    return pd.DataFrame.from_dict(Sales_result.to_dict(),orient='index').reset_index().rename(columns={'index': 'requestedDate'}).to_dict(orient="records")
 
-def total_sales_based_on_customer(office_id,is_admin,from_date,to_date,cnxn):
+def total_sales_based_on_customer(office_id,is_admin,from_date,to_date,cnxn,CustomerName,MobileNo,VehicleNo):
     sales_based_on_customer=[]
-
+    date_range=pd.date_range(from_date,to_date)
+    
 
     if is_admin==6:
         df=godown_list(office_id,from_date,to_date,-1,cnxn)
-        sales_based_on_customer=total_sales_based_on_customer_body(df)
+        sales_based_on_customer=total_sales_based_on_customer_body(df,date_range,CustomerName,MobileNo,VehicleNo)
 
 
     elif is_admin==4:
         df=godown_list(office_id,from_date,to_date,-1,cnxn)
         df=df[~((df["officeType"]!="Company")& (df["masterOfficeId"].str.lower()==office_id.lower()))]
-        sales_based_on_customer=total_sales_based_on_customer_body(df)
+        sales_based_on_customer=total_sales_based_on_customer_body(df,date_range,CustomerName,MobileNo,VehicleNo)
 
     elif is_admin==5:
         df=godown_list(office_id,from_date,to_date,-1,cnxn)
-        sales_based_on_customer=total_sales_based_on_customer_body(df)
+        sales_based_on_customer=total_sales_based_on_customer_body(df,date_range,CustomerName,MobileNo,VehicleNo)
 
     elif is_admin==1:
         df=godown_list(office_id,from_date,to_date,1,cnxn)
-        sales_based_on_customer=total_sales_based_on_customer_body(df[(df["officeType"]=="Wholesale Pumps")| (df["officeType"]=="Retail Pumps")])
+        sales_based_on_customer=total_sales_based_on_customer_body(df[(df["officeType"]=="Wholesale Pumps")| (df["officeType"]=="Retail Pumps")],date_range,CustomerName,MobileNo,VehicleNo)
 
     elif is_admin==3:
         df=godown_list(office_id,from_date,to_date,1,cnxn)
     
         df=df[df["officeType"]=="Wholesale Pumps"]
-        sales_based_on_customer=total_sales_based_on_customer_body(df)
+        sales_based_on_customer=total_sales_based_on_customer_body(df,date_range,CustomerName,MobileNo,VehicleNo)
 
     elif is_admin==2:
         df=godown_list(office_id,from_date,to_date,1,cnxn)
         df=df[df["officeType"]=="Retail Pumps"]
-        sales_based_on_customer=total_sales_based_on_customer_body(df)
+        sales_based_on_customer=total_sales_based_on_customer_body(df,date_range,CustomerName,MobileNo,VehicleNo)
 
     elif is_admin==0:
         df=godown_list(office_id,from_date,to_date,1,cnxn)
         df=df[df["officeId"].str.lower()==office_id.lower()]
-        sales_based_on_customer=total_sales_based_on_customer_body(df)
+        sales_based_on_customer=total_sales_based_on_customer_body(df,date_range,CustomerName,MobileNo,VehicleNo)
 
     return sales_based_on_customer
